A bunch of stuff, mostly lifted our UI from lab1 to fit our new lab, YEAH!